kubernetes/apps/database/dragonfly/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/networkpolicyegressrule-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-cluster
spec:
  ingress:
    - ports:
        - port: 9999
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
              app.kubernetes.io/instance: victoria-metrics
        - namespaceSelector: &dbNamespace
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              control-plane: controller-manager
        - namespaceSelector: *dbNamespace
          podSelector:
            matchLabels:
              app: dragonfly-cluster
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
    - ports:
        - port: 6379
          protocol: TCP
      from:
        - namespaceSelector: *dbNamespace
          podSelect:
            matchLabels:
              app.kubernetes.io/name: dfguard
  podSelector:
    matchLabels:
      app: dragonfly-cluster
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
